# CAMRE

./: README.md  env.sh  planner.sh
DDR-opt/back_end/: CMakeLists.txt
DDR-opt/back_end/config/: global_planning3ms_unknown.yaml
DDR-opt/back_end/include/back_end/: optimizer.h
DDR-opt/back_end/src/: optimizer.cpp  star_convex_handle.cpp
DDR-opt/front_end/include/front_end/jps_planner/: graph_search.h  jps_planner.h
DDR-opt/front_end/src/jps_planner/: graph_search.cpp  jps_planner.cpp
DDR-opt/icrekf/src/: icrekf.cpp
DDR-opt/mpc_controller/config/: mpc3ms_unknown.yaml
DDR-opt/mpc_controller/include/mpc_controller/: mpc.h
DDR-opt/mpc_controller/src/: mpc.cpp
DDR-opt/nmpc_controller/src/: mpc.cpp
DDR-opt/plan_manager/config/: car3ms_unknown.yaml
DDR-opt/plan_manager/include/plan_manager/: plan_manager.hpp  plan_manager_1.hpp
DDR-opt/plan_manager/include/visualizer/: visualizer.hpp
DDR-opt/plan_manager/launch/: planner_sim_unknown.launch  planner_single.launch
DDR-opt/utils/laser_simulator/src/: laser_sim_node.cpp
DDR-opt/utils/plan_env/include/plan_env/: sdf_map.h
DDR-opt/utils/plan_env/src/: sdf_map copy.cpp  sdf_map.cpp
DDR-opt/utils/simulator/include/simulator/: simulator.h
DDR-opt/utils/simulator/src/: global_map.cpp
multi_slam_realm/: CMakeLists.txt  README.md  package.xml
multi_slam_realm/include/: functions.h
multi_slam_realm/launch/: multi_connect_karto.launch
multi_slam_realm/rviz/: single.rviz
multi_slam_realm/scripts/: constants.py  filter.py  functions.py  opencv_detector.py
multi_slam_realm/src/: Mapper.cpp  filterScan.cpp  slam_karto.cpp
multi_slam_realm/src/frontier_detector/: global_rrt_detector.cpp  local_rrt_detector.cpp
p3dx/p3dx_control/config/: control4.yaml
p3dx/p3dx_description/launch/: description.launch
p3dx/p3dx_description/urdf/p3dx/: pioneer3dx.xacro
p3dx/p3dx_description/urdf/sensors/: hokuyo_utm30lx.urdf.xacro
planner/: CMakeLists.txt  package.xml
planner/include/: FrontierAssigner.hpp  GraphMST.hpp  hungarian.hpp  robots.hpp  rosvoronoi.h  star_convex_handle.h  star_convex_handle.hpp  visual.h
planner/launch/: d_exploration.launch  exploration.launch  frontier_assigner.launch  gmapping_move_base.launch  graph_mst.launch  scan_star_region_node.launch  star_convex_test.launch  three_mir.launch  three_mir_.launch  three_robot.rviz  traj_opt.launch
planner/launch/param/: base_local_planner_params.yaml  clutter_env.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
planner/launch/teb_params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
planner/launch/teb_params/dyn_obst/: costmap_converter_params.yaml
planner/maps/: map.pgm  map.yaml
planner/maps/map1/: map.pgm  map.yaml  map100025.pgm  map100025.yaml
planner/src/exploration/: FrontierAssigner copy.cpp  FrontierAssigner.cpp  GraphMST.cpp  frontiers.cpp  get_voronoi_centroid.cpp  merge_map.cpp  robot_position.cpp  star_convex_handle.cpp  target_assigner.cpp
planner/src/scp/: pub_flipped_convexhull.cpp  scan_filter.cpp  scan_star_region_node.cpp  star_convex_handle.cpp
planner/visualization/: CMakeLists.txt  package.xml
planner/visualization/launch/: visualize_map_traj.launch
planner/visualization/scripts/: record_los_min_plot.py  record_vel_plot.py  replot_los_from_csv.py  traj_visualizer.py
planner/worlds/: garage.world  larger_garage.world  larger_garage_scaled.world  maze.pgm  maze.world  maze.yaml  maze_scaled.world  office.pgm  office.world  office.yaml  scale_sdf_world.py
