<?xml version="1.0"?>
<package format="2">
  <name>traj_map_visualizer</name>
  <version>0.0.1</version>
  <description>Visualize map and multi-robot trajectories in RViz</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rviz</depend>

  <export/>
</package>